# pamac-classic

./: .gitignore  CMakeLists.txt  README.md  autogen.sh  meson.build  pamac.avprj
data/: org.pamac.aur.gschema.xml
data/interface/: preferences_dialog.ui
data/polkit/: org.pamac.policy
po/: LINGUAS  POTFILES.in  af.po  ar.po  ast.po  az_AZ.po  be.po  bg.po  bn.po  bs.po  bs_BA.po  ca.po  ca_ES.po  create_pot_file.sh  cs.po  cs_CZ.po  cy.po  da.po  de.po  de_CH.po  de_DE.po  el.po  el_GR.po  en_GB.po  eo.po  es.po  es_419.po  es_AR.po  es_ES.po  es_MX.po  es_SV.po  et.po  eu.po  fa.po  fa_IR.po  fi.po  fo.po  fr.po  gl.po  he.po  (+48 more)
src/: CMakeLists.txt  Config.vala.base  Pamac.deps  Pamac.pc  alpm_config.vala  aur.vala  choose_ignorepkgs_dialog.vala  common.vala  meson.build  mirrors_config.vala  pamac_config.vala  pamacclassic.pc  preferences_dialog.vala  progress_box.vala  transaction.vala  transaction_sum_dialog.vala
src/pamac-clean-cache/: CMakeLists.txt  meson.build
src/pamac-install/: CMakeLists.txt  installer.vala  meson.build  progress_dialog.vala
src/pamac-manager/: CMakeLists.txt  history_dialog.vala  manager.vala  manager_window.vala  meson.build
src/pamac-system-daemon/: CMakeLists.txt  meson.build  system_daemon.vala
src/pamac-tray/: CMakeLists.txt  meson.build  tray-gtk.vala  tray.vala
src/pamac-user-daemon/: CMakeLists.txt  meson.build  user_daemon.vala
src/vapis/: libalpm.vapi
